# ai-research-skill

./: .gitignore  README.md  SKILL.md  pyproject.toml
examples/: example_commands.md  mcp_config.json  mcp_config_windows_venv.json
prompts/: mcp_agent_instructions.md  research_skill_prompt.md
scripts/: install_macos_linux.sh  install_windows.ps1
src/ai_research_skill/: cli.py  mcp_server.py  models.py  utils.py  youtube.py
tests/: test_utils.py
